fix accordions overflow

--- a/SCSS/layouts/_aboutSection.scss
+++ b/SCSS/layouts/_aboutSection.scss
@@ -40,12 +40,13 @@
 
   .info-accordions {
     margin: 0 auto;
+    padding: 0 2rem;
     padding-bottom: 3rem;
 
     color: white;
 
     .accordion {
-      width: 500px;
+      max-width: 500px;
       margin: 1.2rem auto;
       padding: 1rem;
       color: #b7a769;
